--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.4</version>
                 <configuration>
-                    <mainClass>j.tower.defence.javafx.App</mainClass>
+                    <mainClass>game.App</mainClass>
                 </configuration>
                 <executions>
                     <execution>
